<resources>
    <string name="app_name">Truco Score Board</string>
    <string name="first_player_name">Jogador 1</string>
    <string name="second_player_name">Jogador 2</string>
    <string name="player_points">%s pontos</string>
    <string name="point_1">+1</string>
    <string name="point_3">+3</string>
    <string name="point_6">+6</string>
    <string name="point_9">+9</string>
    <string name="point_12">+12</string>
    <string name="history">Histórico</string>
    <string name="clear_history">Limpar Histórico</string>
    <string name="naming_inform">Inf. Nomes</string>
    <string name="winner_dialog_title">Fim de Jogo</string>
    <string name="player_1_wins">Jogador 1 ganhou!</string>
    <string name="player_2_wins">Jogador 2 ganhou!</string>
    <string name="player_wins_game">%s ganhou!</string>
    <string name="ok">OK</string>
    <string name="player_wins">%s vitórias</string>
    <string name="go_back">Voltar</string>
    <string name="history_title">Histórico de vitórias</string>
    <string name="change_name_title">Mudar nome dos jogadores</string>
    <string name="confirmar">Confirmar</string>
    <string name="name_change_successfully">Nomes alterados com sucesso!</string>
    <string name="colon">:</string>
    <string name="main_title">Contador de Pontos - Truco</string>
</resources>