<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeNameActivity">

    <TextView
        android:id="@+id/tv_change_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_name_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_first_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/first_player_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/edt_first_player_wins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_first_player_wins" />

    <EditText
        android:id="@+id/edt_first_player_wins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/first_player_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/tv_first_player_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_change_name_title" />

    <TextView
        android:id="@+id/tv_second_player_name"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:text="@string/second_player_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/edt_second_player_name"
        app:layout_constraintStart_toStartOf="@+id/tv_first_player_name"
        app:layout_constraintTop_toTopOf="@+id/edt_second_player_name" />

    <EditText
        android:id="@+id/edt_second_player_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/second_player_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/tv_second_player_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_first_player_wins" />

    <Button
        android:id="@+id/btn_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_back"
        app:layout_constraintStart_toStartOf="@+id/tv_second_player_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_second_player_name" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/confirmar"
        app:layout_constraintBottom_toBottomOf="@+id/btn_go_back"
        app:layout_constraintStart_toEndOf="@+id/btn_go_back"
        app:layout_constraintTop_toTopOf="@+id/btn_go_back" />

</androidx.constraintlayout.widget.ConstraintLayout>